--- a/power/src/index.html
+++ b/power/src/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portal für Wertermittlung Niedersachsen</title>
+  <title i18n>Portal für Wertermittlung Niedersachsen</title>
   <base href="/">
 
-  <meta name="description" content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
+  <meta name="description" i18n-content content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
 
   <meta name="viewport" content="user-scalable=no,width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
@@ -29,11 +30,11 @@
     <div id="spinner"></div>
   </power-root>
   <noscript>
-    <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
+    <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;" i18n>
       Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.
     </h3>
   </noscript>
-  <noscript>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
+  <noscript i18n>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
 </body>
 
 </html>
