Used HTML and Typescript formatter

--- a/power/src/index.html
+++ b/power/src/index.html
@@ -6,7 +6,8 @@
   <title i18n>Portal für Wertermittlung Niedersachsen</title>
   <base href="/">
 
-  <meta name="description" i18n-content content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
+  <meta name="description" i18n-content
+    content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
 
   <meta name="viewport" content="user-scalable=no,width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
