--- a/power/src/index.html
+++ b/power/src/index.html
@@ -1,41 +1,59 @@
 <!doctype html>
-<html i18n-lang lang="de">
+<html i18n-lang
+      lang="de">
 
 <head>
     <meta charset="utf-8">
     <title i18n>Portal für Wertermittlung Niedersachsen</title>
     <base href="/">
 
-    <meta name="description" i18n-content
+    <meta name="description"
+          i18n-content
           content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
 
-    <meta name="viewport" content="user-scalable=no,width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="viewport"
+          content="user-scalable=no,width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <link rel="icon"
+          type="image/x-icon"
+          href="favicon.ico">
+    <link rel="manifest"
+          href="manifest.json">
+    <meta name="theme-color"
+          content="#1976d2">
 
     <!-- Apple PWA -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable"
+          content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style"
+          content="black">
 
     <!-- Apple Touch Icons-->
-    <link rel="apple-touch-icon" href="assets/icons/icon-512x512.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="384x384" href="assets/icons/icon-384x384.png">
+    <link rel="apple-touch-icon"
+          href="assets/icons/icon-512x512.png">
+    <link rel="apple-touch-icon"
+          sizes="152x152"
+          href="assets/icons/icon-152x152.png">
+    <link rel="apple-touch-icon"
+          sizes="192x192"
+          href="assets/icons/icon-192x192.png">
+    <link rel="apple-touch-icon"
+          sizes="384x384"
+          href="assets/icons/icon-384x384.png">
 </head>
 
 <body>
-<power-root>
-    <div id="spinner"></div>
-</power-root>
-<noscript>
-    <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;" i18n>
-        Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.
-    </h3>
-</noscript>
-<noscript i18n>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
+    <power-root>
+        <div id="spinner"></div>
+    </power-root>
+    <noscript>
+        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;"
+            i18n>
+            Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.
+        </h3>
+    </noscript>
+    <noscript i18n>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
 </body>
 
 </html>
