--- a/power/src/index.html
+++ b/power/src/index.html
@@ -12,7 +12,7 @@
           content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
 
     <meta name="viewport"
-          content="user-scalable=no,width=device-width, initial-scale=1">
+          content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta http-equiv="X-UA-Compatible"
           content="IE=edge">
     <link rel="icon"
