--- a/power/src/index.html
+++ b/power/src/index.html
@@ -8,7 +8,8 @@
 
     <meta name="description"
           i18n-content
-          content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt.">
+          content="Bodenrichtwerte für Bauland und Bodenrichtwerte für landwirtschaftliche Nutzflächen werden flächendeckend innerhalb dieser Web-Site für das gesamte Land Niedersachsen zur Verfügung gestellt."
+    >
 
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=5">
@@ -48,7 +49,8 @@
     </power-root>
     <noscript>
         <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;"
-            i18n>
+            i18n
+            >
             Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.
         </h3>
     </noscript>
