--- a/power/src/index.html
+++ b/power/src/index.html
@@ -17,8 +17,6 @@
     <link rel="icon"
           type="image/x-icon"
           href="favicon.ico">
-    <link rel="manifest"
-          href="manifest.json">
     <meta name="theme-color"
           content="#1976d2">
 
@@ -40,6 +38,10 @@
     <link rel="apple-touch-icon"
           sizes="384x384"
           href="assets/icons/icon-384x384.png">
+    <link rel="manifest"
+          href="manifest.webmanifest">
+    <meta name="theme-color"
+          content="#1976d2">
 </head>
 
 <body>
