Changed application name

--- a/power/src/index.html
+++ b/power/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title i18n>IMMOBILIENMARKT.NI</title>
+    <title i18n>Immobilienmarkt.NI</title>
     <base href="/">
 
     <meta name="description"
