--- a/power/src/index.html
+++ b/power/src/index.html
@@ -9,7 +9,15 @@
     <meta name="description"
           lang="de"
           content="Immobilienmarkt Niedersachsen">
+    <meta name="keywords"
+          lang="de"
+          content="Immobilienmarkt, Niedersachsen, Bodenrichtwerte, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Immobilienpreisindex">
+    <meta name="author"
+          lang="de"
+          content="Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)">
 
+    <meta name="robots"
+          content="index,follow">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta http-equiv="X-UA-Compatible"
@@ -50,9 +58,7 @@
     </power-root>
     <noscript>
         <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;"
-            i18n>
-            Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.
-        </h3>
+            i18n>Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.</h3>
     </noscript>
     <noscript i18n>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
 </body>
