--- a/power/src/index.html
+++ b/power/src/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description"
           lang="de"
-          content="Immobilienmarkt Niedersachsen">
+          content="Kostenloser Zugriff auf Bodenrichtwerte und Grundstücksmarktdaten von Niedersachsen">
     <meta name="keywords"
           lang="de"
           content="Immobilienmarkt, Niedersachsen, Bodenrichtwerte, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Immobilienpreisindex">
