--- a/power/src/index.html
+++ b/power/src/index.html
@@ -7,11 +7,9 @@
     <base href="/">
 
     <meta name="description"
-          lang="de"
           content="Kostenloser Zugriff auf Bodenrichtwerte und Grundstücksmarktdaten von Niedersachsen">
     <meta name="keywords"
-          lang="de"
-          content="Immobilienmarkt, Niedersachsen, Bodenrichtwerte, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Immobilienpreisindex">
+          content="Immobilienmarkt, Niedersachsen, Wertermittlung, Bodenrichtwerte, BORIS.NI, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Landesgrund­stücks­markt­daten, Immobilienpreisindex, NIPIX, Immobilien-Preis-Kalkulator, IPK">
     <meta name="author"
           lang="de"
           content="Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)">
