Added canonical url and fixed nginx problem

--- a/power/src/index.html
+++ b/power/src/index.html
@@ -13,6 +13,8 @@
     <meta name="author"
           lang="de"
           content="Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)">
+    <link rel="canonical"
+          href="https://immobilienmarkt.niedersachsen.de/">
 
     <meta name="robots"
           content="index,follow">
