--- a/power/src/index.html
+++ b/power/src/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
           content="Kostenloser Zugriff auf Bodenrichtwerte und Grundstücksmarktdaten von Niedersachsen">
     <meta name="keywords"
-          content="Immobilienmarkt, Niedersachsen, Wertermittlung, Bodenrichtwerte, BORIS.NI, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Landesgrund­stücks­markt­daten, Immobilienpreisindex, NIPIX, Immobilien-Preis-Kalkulator, IPK">
+          content="Immobilienmarkt, Niedersachsen, Wertermittlung, Bodenrichtwerte, BORIS, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Landesgrund­stücks­markt­daten, Immobilienpreisindex, NIPIX, Immobilien-Preis-Kalkulator, IPK">
     <meta name="author"
           lang="de"
           content="Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)">
