OGC Infopage part 1

--- a/power/src/index.html
+++ b/power/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
 
     <meta name="description"
-          content="Kostenloser Zugriff auf Bodenrichtwerte und Grundstücksmarktdaten von Niedersachsen">
+          content="Gebührenfreier Zugriff auf Bodenrichtwerte und Grundstücksmarktdaten von Niedersachsen">
     <meta name="keywords"
           content="Immobilienmarkt, Niedersachsen, Wertermittlung, Bodenrichtwerte, BORIS, Grundstücksmarktberichte, Landesgrundstücksmarktberichte, Landesgrund­stücks­markt­daten, Immobilienpreisindex, NIPIX, Immobilien-Preis-Kalkulator, IPK">
     <meta name="author"
