--- a/power/src/index.html
+++ b/power/src/index.html
@@ -22,34 +22,55 @@
           content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta http-equiv="X-UA-Compatible"
           content="IE=edge">
-    <link rel="icon"
+    <link rel="shortcut icon"
           type="image/x-icon"
           href="favicon.ico">
-    <meta name="theme-color"
-          content="#1976d2">
+    <link rel="manifest"
+          href="manifest.webmanifest">
 
-    <!-- Apple PWA -->
+    <!-- Android -->
+    <meta name="mobile-web-app-capable"
+          content="yes">
+    <meta name="theme-color"
+          content="#c4153a">
+    <link rel="icon"
+          type="image/png"
+          sizes="192x192"
+          href="assets/icons/icon-192x192.png">
+    <link rel="icon"
+          type="image/png"
+          sizes="128x128"
+          href="assets/icons/icon-128x128.png">
+
+    <!-- Windows  -->
+    <meta name="application-name"
+          i18n-content
+          content="Immobilienmarkt.NI">
+    <meta name="msapplication-TileColor"
+          content="#c4153a">
+    <meta name="msapplication-TileImage"
+          content="assets/icons/icon-144x144.png">
+
+    <!-- iOS -->
     <meta name="apple-mobile-web-app-capable"
           content="yes">
+    <meta name="apple-mobile-web-app-title"
+          i18n-content
+          content="Immobilienmarkt.NI">
     <meta name="apple-mobile-web-app-status-bar-style"
           content="black">
-
-    <!-- Apple Touch Icons-->
     <link rel="apple-touch-icon"
+          sizes="512x512"
           href="assets/icons/icon-512x512.png">
     <link rel="apple-touch-icon"
-          sizes="152x152"
-          href="assets/icons/icon-152x152.png">
+          sizes="384x384"
+          href="assets/icons/icon-384x384.png">
     <link rel="apple-touch-icon"
           sizes="192x192"
           href="assets/icons/icon-192x192.png">
     <link rel="apple-touch-icon"
-          sizes="384x384"
-          href="assets/icons/icon-384x384.png">
-    <link rel="manifest"
-          href="manifest.webmanifest">
-    <meta name="theme-color"
-          content="#1976d2">
+          sizes="152x152"
+          href="assets/icons/icon-152x152.png">
 </head>
 
 <body>
