--- a/power/src/index.html
+++ b/power/src/index.html
@@ -19,7 +19,7 @@
     <meta name="robots"
           content="index,follow">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=5">
+          content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible"
           content="IE=edge">
     <link rel="shortcut icon"
