--- a/power/src/index.html
+++ b/power/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title i18n>Immobilienmarkt.NI</title>
+    <title>Immobilienmarkt.NI</title>
     <base href="/">
 
     <meta name="description"
@@ -42,7 +42,6 @@
 
     <!-- Windows  -->
     <meta name="application-name"
-          i18n-content
           content="Immobilienmarkt.NI">
     <meta name="msapplication-TileColor"
           content="#c4153a">
@@ -53,7 +52,6 @@
     <meta name="apple-mobile-web-app-capable"
           content="yes">
     <meta name="apple-mobile-web-app-title"
-          i18n-content
           content="Immobilienmarkt.NI">
     <meta name="apple-mobile-web-app-status-bar-style"
           content="black">
@@ -76,10 +74,10 @@
         <div id="spinner"></div>
     </power-root>
     <noscript>
-        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;"
-            i18n>Entschuldigung, diese Webseite ist ohne JavaScript nicht nutzbar.</h3>
+        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">Entschuldigung, diese Webseite ist ohne
+            JavaScript nicht nutzbar.</h3>
     </noscript>
-    <noscript i18n>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
+    <noscript>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
 </body>
 
 </html>
