--- a/power/src/index.html
+++ b/power/src/index.html
@@ -73,7 +73,7 @@
         <div id="spinner"></div>
     </power-root>
     <noscript>
-        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">Entschuldigung, diese Webseite ist ohne
+        <h3>Entschuldigung, diese Webseite ist ohne
             JavaScript nicht nutzbar.</h3>
     </noscript>
     <noscript>Bitte aktivieren Sie JavaScript, um diese Webseite zu nutzen.</noscript>
